--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 
 		<title>Portfolio Page</title>
 		<meta name="description" content="portfolio page" />
-		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
-		<link rel="stylesheet" type="text/css" href="css/demo.css" />
-		<link rel="stylesheet" type="text/css" href="css/component.css" />
+		<link rel="stylesheet" type="text/css" href="css/normalize.min.css" />
+		<link rel="stylesheet" type="text/css" href="css/demo.min.css" />
+		<link rel="stylesheet" type="text/css" href="css/component.min.css" />
 
-		<link rel="stylesheet" type="text/css" href="css/style2.css" />
-		<link rel="stylesheet" type="text/css" href="css/media.css" />
+		<link rel="stylesheet" type="text/css" href="css/style2.min.css" />
+		<link rel="stylesheet" type="text/css" href="css/media.min.css" />
 		
 		<!-- Font Awesome -->
         <script src="https://use.fontawesome.com/0233c2734a.js"></script>
