--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                      <ul>
                             <li class="skill-percentage">HTML / HTML5</li>
                             <li class="skill-percentage">CSS / CSS3 / Sass / Stylus / Bootstrap3</li>
-                            <li class="skill-percentage">Javascript / jQUery</li>
+                            <li class="skill-percentage">Javascript / jQuery</li>
                             <li class="skill-percentage">Gulp, Git</li>
                             <li class="skill-percentage">Axure/Prototyping</li>
                             <li class="skill-percentage">Photoshop</li>
